--- a/contacts.html
+++ b/contacts.html
@@ -54,12 +54,38 @@
                         <a href="signin.html" class="nav-link">Sign In</a>
                     </li>
                 </ul>
-                <a href="#">
+                <a href="#" id="searchIcon">
                     <i class="fas fa-search d-inline ml-2"></i>
                 </a>
             </div>
         </div>
     </nav>
+
+    <!-- Setting up the modal for search button -->
+    <div id="searchModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-md" role="document">
+            <div class="modal-content">
+                <div class="modal-header text-center bg-info">
+                    <h2 class="text-white">Find Your Dreaming House</h2>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <form>                            
+                            <div class="row form-group mt-1">                                
+                                <div class="col-md-9">
+                                    <input class="form-control" type="text" id="search" name="search" placeholder="Search here">                                    
+                                </div>
+                                <div class="col">
+                                    <button class="btn btn-primary form-group">Search</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- CONTACT SECTION -->
     <section id="contactSection">
